# src/swagger.json
@@ -11,20 +11,51 @@
   "host": "room-finder-api.herokuapp.com",
   "basePath": "/api/v1",
   "tags": [
-    { "name": "Host", "description": "Endpoints for hosts" },
     { "name": "Admin", "description": "Endpoints for admins" },
+    { "name": "Host", "description": "Endpoints for hosts" },
     { "name": "User", "description": "Endpoints for regular users" }
   ],
   "schemes": ["http", "https"],
   "consumes": ["application/json"],
   "produces": ["application/json"],
+  "responses": {
+    "400": {
+      "description": "Bad Request",
+      "schema": {
+        "type": "object",
+        "properties": {
+          "msg": {
+            "type": "string"
+          },
+          "status": {
+            "type": "integer"
+          },
+          "data": {
+            "type": "object"
+          }
+        }
+      }
+    },
+    "204": {
+      "description": "No Content - Resource deleted successfully",
+      "schema": {
+        "type": "object",
+        "properties": {
+          "msg": {
+            "type": "string"
+          }
+        }
+      }
+    }
+  },
   "definitions": {
     "RoomType": {
       "type": "object",
       "properties": {
         "_id": {
           "type": "integer",
-          "format": "int64"
+          "format": "int64",
+          "readOnly": true
         },
         "name": {
           "type": "string"
@@ -79,22 +110,130 @@
             "type": "string"
           }
         },
+        "amenities": {
+          "type": "array",
+          "items": {
+            "type": "integer",
+            "format": "int64"
+          }
+        },
         "isApproved": {
           "type": "boolean",
           "default": false
         },
         "createdAt": {
           "type": "string",
-          "format": "date-time"
+          "format": "date-time",
+          "readOnly": true
         },
         "updatedAt": {
           "type": "string",
-          "format": "date-time"
+          "format": "date-time",
+          "readOnly": true
+        }
+      },
+      "required": [
+        "name",
+        "roomType",
+        "price",
+        "description",
+        "location",
+        "stayPeriod",
+        "amenities"
+      ]
+    },
+    "User": {
+      "type": "object",
+      "properties": {
+        "_id": {
+          "type": "integer",
+          "readOnly": true
+        },
+        "firstname": {
+          "type": "string"
+        },
+        "lastname": {
+          "type": "string"
+        },
+        "email": {
+          "type": "string"
+        },
+        "userType": {
+          "type": "string",
+          "enum": ["user", "admin", "host"]
+        },
+        "profilePicture": {
+          "type": "string"
+        },
+        "createdAt": {
+          "type": "string",
+          "format": "date-time",
+          "readOnly": true
+        },
+        "updatedAt": {
+          "type": "string",
+          "format": "date-time",
+          "readOnly": true
         }
       }
     }
   },
   "paths": {
+    "/signup": {
+      "post": {
+        "tags": ["Admin", "Host", "User"],
+        "description": "Sign up a new user",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "required": ["email", "firstname", "lastname", "userType"],
+              "properties": {
+                "email": {
+                  "type": "string",
+                  "format": "email"
+                },
+                "firstname": {
+                  "type": "string"
+                },
+                "lastname": {
+                  "type": "string"
+                },
+                "userType": {
+                  "type": "string",
+                  "enum": ["admin", "host", "user"],
+                  "default": "user"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Success",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "msg": {
+                  "type": "string"
+                },
+                "status": {
+                  "type": "integer"
+                },
+                "user": {
+                  "$ref": "#/definitions/User"
+                }
+              }
+            }
+          },
+          "400": {
+            "$ref": "#/responses/400"
+          }
+        }
+      }
+    },
     "/room-types": {
       "get": {
         "description": "Returns a list of all room types",
@@ -116,6 +255,7 @@
         "tags": ["Admin", "Host"],
         "parameters": [
           {
+            "x-42c-sample": null,
             "name": "body",
             "in": "body",
             "description": "Room type object",
@@ -153,6 +293,56 @@
             "schema": {
               "$ref": "#/definitions/RoomType"
             }
+          },
+          "400": {
+            "$ref": "#/responses/400"
+          }
+        }
+      },
+      "patch": {
+        "description": "Update a room type",
+        "tags": ["Admin"],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "integer"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "$ref": "#/definitions/RoomType"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "schema": {
+              "$ref": "#/definitions/RoomType"
+            }
+          },
+          "400": {
+            "$ref": "#/responses/400"
+          }
+        }
+      },
+      "delete": {
+        "description": "Deletes a room type",
+        "tags": ["Admin"],
+        "parameters": [
+          {
+            "type": "integer",
+            "name": "id",
+            "in": "path",
+            "required": true
+          }
+        ],
+        "responses": {
+          "204": {
+            "$ref": "#/responses/204"
           }
         }
       }
@@ -198,14 +388,29 @@
       },
       "patch": {
         "description": "Update an amenity",
+        "tags": ["Admin"],
+        "consumes": ["application/json"],
+        "produces": ["application/json"],
         "parameters": [
           {
-            "name": "Update payload",
+            "type": "integer",
+            "name": "id",
+            "in": "path",
+            "required": true
+          },
+          {
+            "name": "payload",
             "in": "body",
             "schema": {
               "type": "object",
+              "required": ["name", "icon"],
+
               "properties": {
                 "name": {
+                  "type": "string",
+                  "example": "Wi-Fi"
+                },
+                "icon": {
                   "type": "string"
                 }
               }
@@ -218,6 +423,23 @@
             "schema": {
               "$ref": "#/definitions/Amenity"
             }
+          }
+        }
+      },
+      "delete": {
+        "description": "Deletes an amenity",
+        "tags": ["Admin"],
+        "parameters": [
+          {
+            "type": "integer",
+            "name": "id",
+            "in": "path",
+            "required": true
+          }
+        ],
+        "responses": {
+          "204": {
+            "$ref": "#/responses/204"
           }
         }
       }
